# up-2-date

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
client/: CMakeLists.txt  client.sh  pack.sh  send.sh  update_client  update_client.cpp  update_client.py
photobox/: CMakeLists.txt  api.proto  avrdude_updater.conf  extract_update.sh  install_firmware.sh  up-2-date.sh  update_server.cpp  update_server.py
photobox/src/protobuf/: api.pb.cc  api.pb.h
src/: main.cpp
src/client/: up-2-date.sh  update_client.py
src/photobox/: up-2-date.sh  update_server.py
src/server/: update_server.py
src/server/dummy/: main.cpp
